fix pulse overflow

--- a/blocks/about.css
+++ b/blocks/about.css
@@ -47,6 +47,7 @@
   width: 426px;
   background-color: #2f80ed;
   border-radius: 50%;
+  z-index: 1;
 }
 
 @keyframes pulsate {
