--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -6,6 +6,8 @@
   background-color: #fff;
   margin: 0;
   padding: 100px 0;
+  position: relative;
+  z-index: 2;
 }
 
 .menu__title {
